@@ -1,6 +1,7 @@
 [0.2.3.0 - Beta    xx/Apr/2008]
 + added some more XML filter interfaces (mainly monogram filters)
 + added ALLOCATOR_PROPERTIES information for pin connection
++ added "Progress View" form
 
 [0.2.2.0 - Beta    24/Mar/2008]
 + added frame-step button
